The YAML storage.quota.enforced option is not found

XMLWordPrintableJSON

    • Minor Change
    • ALL
    • Hide

      Attempt to start a mongod with the YAML config options in the description

      Show
      Attempt to start a mongod with the YAML config options in the description
    • Server 2.7.5
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Using the following YAML config file (everything else left out, so set to defaults):

      storage:
         quota:
            enforced: true
      

      Results in this error message and mongod failing to start:

      Unrecognized option: storage.quota.enforced
      

      Tested on Windows 2.6.3 and Linux 2.6.3 builds with identical results, tried various values without success: true, false, 0, 1 and blank

      Note that storage.quota.maxFilesPerDB works, no error

            Assignee:
            Adam Midvidy (Inactive)
            Reporter:
            Adam Comerford
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: