SERVER-14756 The YAML storage.quota.enforced option is not found